programming_session.log
Script started on 2022-10-06 15:08:18+09:00 [TERM="xterm-256color" TTY="/dev/pts/3" COLUMNS="159" LINES="15"]
]0;haruka@DESKTOP-LTV8VC4: ~/bprog2022[01;32mharuka@DESKTOP-LTV8VC4[00m:[01;34m~/bprog2022[00m$ lghci src?[K/Rec.hs
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/haruka/bprog2022/.ghci
[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:08:54.314974138
[?1h=>>> j[Kproduct [[K[]
[?1l>1
2022-10-06 15:13:13.925692607
[?1h=>>> product [3,1,4]
[?1l>12
2022-10-06 15:14:06.260793917
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:14:57.020226379
[?1h=>>> product [3,1,4]
[?1l>0
2022-10-06 15:15:10.460741072
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:17:02.584567935
[?1h=>>> :i Num
[?1l>type Num :: * -> Constraint
class Num a where
  (+) :: a -> a -> a
  (-) :: a -> a -> a
  (*) :: a -> a -> a
  negate :: a -> a
  abs :: a -> a
  signum :: a -> a
  fromInteger :: Integer -> a
  {-# MINIMAL (+), (*), abs, signum, fromInteger, (negate | (-)) #-}
  	-- Defined in ‘GHC.Num’
instance Num NominalDiffTime
  -- Defined in ‘time-1.9.3:Data.Time.Clock.Internal.NominalDiffTime’
instance Num DiffTime
  -- Defined in ‘time-1.9.3:Data.Time.Clock.Internal.DiffTime’
instance Num Word -- Defined in ‘GHC.Num’
instance Num Integer -- Defined in ‘GHC.Num’
instance Num Int -- Defined in ‘GHC.Num’
instance Num Float -- Defined in ‘GHC.Float’
instance Num Double -- Defined in ‘GHC.Float’
2022-10-06 15:20:02.599372981
[?1h=>>> :t 3
[?1l>3 :: Num p => p
2022-10-06 15:24:35.401159344
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:41:40.896678905
[?1h=>>> drop 2 [3,1,4,1,5]
[?1l>[4,1,5]
2022-10-06 15:42:05.417832796
[?1h=>>> drop 10 [3,1,4,1,5]0 [3,1,4,1,5][K[13D0 [3,1,4,1,5][K[13D50 [3,1,4,1,5][13D
[?1l>
[;1m<interactive>:10:1: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    • Variable not in scope: drop50 :: [a0] -> t
    • Perhaps you meant ‘drop’ (line 10)[0m[0m
2022-10-06 15:42:35.483769471
[?1h=>>> drop50 [3,1,4,1,5] [3,1,4,1,5][K[12D [3,1,4,1,5][K[12D  [3,1,4,1,5][12D5 [3,1,4,1,5][12D[C[C[C[C[C[C[C[C[C[C[C[C
[?1l>[]
2022-10-06 15:42:55.36869122
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 15:47:09.404888092
[?1h=>>> :r[2Ddrop 5 [3,1,4,1,5]5 [3,1,4,1,5][K[13D25 [3,1,4,1,5][13D5 [3,1,4,1,5][K[13D5 [3,1,4,1,5][K[13Dp5 [3,1,4,1,5][13D[C [3,1,4,1,5][K[12D2 [3,1,4,1,5][12D  [3,1,4,1,5][12D p2  [3,1,4,1,5][15Dp2  [3,1,4,1,5][K[15D[C 2  [3,1,4,1,5][14D
[?1l>[4,1,5]
2022-10-06 15:47:39.700573777
[?1h=>>> head []
[?1l>*** Exception: Prelude.head: empty list
2022-10-06 15:52:00.013950292
[?1h=>>> tail []
[?1l>*** Exception: Prelude.tail: empty list
2022-10-06 15:52:13.106999871
[?1h=>>> last []
[?1l>*** Exception: Prelude.last: empty list
2022-10-06 15:54:24.648160163
[?1h=>>> init []
[?1l>
[;1m<interactive>:17:1: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m Variable not in scope: init :: [a0] -> t[0m[0m
2022-10-06 15:54:32.574620803
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 16:01:08.117969979
[?1h=>>> init [3,1,4,1,5]
[?1l>[3,1,4,1]
2022-10-06 16:01:17.765168745
[?1h=>>> init []
[?1l>*** Exception: karaya-
CallStack (from HasCallStack):
  error, called at src/Rec.hs:15:11 in main:Rec
2022-10-06 16:03:16.009913554
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )

[;1msrc/Rec.hs:23:44: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    parse error (possibly incorrect indentation or mismatched brackets)[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m23 |[0m[0m      | otherwise = error "negative number"|[;1m[31m[0m[0m
[;1m[34m   |[0m[0m[;1m[31m                                            ^[0m[0m
Failed, no modules loaded.
2022-10-06 16:10:42.840207383
[?1h=>>> :r
[?1l>[1 of 1] Compiling Rec              ( src/Rec.hs, interpreted )
Ok, one module loaded.
2022-10-06 16:11:04.19758628
[?1h=>>> fac 10
[?1l>90
2022-10-06 16:11:09.73456952
[?1h=>>> fac (-1)
[?1l>*** Exception: negative number
CallStack (from HasCallStack):
  error, called at src/Rec.hs:23:20 in main:Rec
2022-10-06 16:11:44.828840245
[?1h=>>> :q
[?1l>Leaving GHCi.
]0;haruka@DESKTOP-LTV8VC4: ~/bprog2022[01;32mharuka@DESKTOP-LTV8VC4[00m:[01;34m~/bprog2022[00m$ git add.
git: 'add.' is not a git command. See 'git --help'.

The most similar command is
	add
]0;haruka@DESKTOP-LTV8VC4: ~/bprog2022[01;32mharuka@DESKTOP-LTV8VC4[00m:[01;34m~/bprog2022[00m$ git add .
